test/good/statements.mpp
var foo:int;

if 1 then { print 0; } else { print 1; };

while 0 do { read foo; };

/* skip CaseOf for now */

foo := 3;
