test/bad/type_missmatch_27.mpp
if 1 then {
    print 0;
} else {
    print 1;
};
